Truncate password in the drop-down.

Currently ellipsis is added to the value but it should be just truncated.

Bug: 869394
Change-Id: I68cee8a70a45564ace59512356489c195327ca1c
Reviewed-on: https://chromium-review.googlesource.com/1156696
Reviewed-by: Tommy Martino <tmartino@chromium.org>
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579604}
Former-commit-id: 9080a8ec38bbe99536df8574fa498a33ec4e95ff